test: 테스트코드 추가
k6 api실행 코드 작성
배송 관련 단위 테스트 작성